Fix css misalignment

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -17,7 +17,7 @@
 	}
 	h4{
 		display:inline-block;
-		margin-left: 40px;
+		margin-left: 37px;
 	}
 }
 @media(min-width:768px) {
